# bitmail

./: .gitattributes  .gitignore  README.md
android/: gradle.properties
android/ChatDemoUI3.0/: .gitignore  gradle.properties  local.properties
android/ChatDemoUI3.0/app/: .gitignore  build.gradle
android/app/: build.gradle  proguard-rules.pro
android/core/: .classpath
android/easeui/easeui/: build.gradle
android/easeui/easeui/src/main/jni/: BitMailWrapper.cpp  BitMailWrapper.h  CMakeLists.txt  x509cert.cpp
android/easeui/easeui/src/main/jni/include/armeabi-v7a/openssl/: opensslconf.h
android/easeui/easeui/src/main/jni/lib/armeabi-v7a/pkgconfig/: libcrypto.pc  libssl.pc
android/easeui/easeui/src/main/jni/lib/x86/pkgconfig/: libssl.pc  openssl.pc
android/easeui/easeui/src/main/jni/openssl-source/: Setenv-android-armeabi-v7a.sh
android/prototype/: .project
client/: .gitignore  BitMailClient.pro  README.md
client/src/: bitmailclient.cpp
core/: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  makeso.sh
core/include/: Makefile.am
core/include/bitmailcore/: Makefile.am  bitmail.h  bitmail_api.h  bitmail_internal.h  brad.h  email.h  multipart.h  rpc.h  x509cert.h
core/shared/: bitmail_api.cpp  bitmail_api.h  makedll.sh  makeso.sh
core/src/: Makefile.am  bitmail.cpp  bitmail_api.cpp  brad.cpp  email.cpp  multipart.cpp  rpc.cpp  x509cert.cpp
core/src/brad/: brad.cpp  brad.h
core/test/: Makefile  Makefile.sysdep  mingwdll.sh
core/test/ssl/: alicecert.pem  alicekey.pem  bobcert.pem  bobkey.pem  catcert.pem  catcsr.pem  catkey.pem
daemon/: .gitignore  README.md  backend.js  build.sh  daemon.cpp  setting-example.h
depends/: .gitignore  Makefile  Makefile.miniupnpc  Makefile.natpmp  curl.mk  curl.sh  darwin_x64.sh  libiconv.sh  libmicrohttpd-0.9.51.tar.gz.sig  libmicrohttpd.sh  libnatpmp.sh  lua.mk  lua.sh  microhttpd.mk  microhttpd.sh  miniupnpc.Makefile.mingw  miniupnpc.sh  native.sh  natpmp.getgateway.c  natpmp.h  openssl.mk  openssl.sh  qrencode.mk  qrencode.sh  systemdeps.md  systemdeps.sh  ubuntu_x64.sh  win32_mingw.sh
depends/backup/: Makefile  lua.sh  qrencode.sh
depends/tarballs/: curl-7.48.0.tar.gz.asc
doc/: bitmail.pdf.md  bitmail.sh  buddyIndex.json.example  ca.ext  ca.sh  cmd.txt  network.json.example  subj.ext  subj.sh  whitepaper.md
qt/: .gitignore  BitMail.pro  License.txt  ardialog.cpp  ardialog.h  ardialog.ui  assistantdialog.cpp  assistantdialog.h  assistantdialog.ui  autogen.macosx.x64.sh  autogen.sh  autogen.ubuntu.x64.sh  autogen.win32.mingw.sh  bitmail.pro  bitmail.qrc  bitmail.rc  bracthread.cpp  bracthread.h  bradthread.cpp  bradthread.h  certdialog.cpp  certdialog.h  certdialog.ui  clickablelabel.cpp  clickablelabel.h  createprofiledialog.cpp  createprofiledialog.h  createprofiledialog.ui  dialogaddbuddy.cpp  dialogaddbuddy.h  dialogaddbuddy.ui  dlgshowqrcode.cpp  dlgshowqrcode.h  dlgshowqrcode.ui  dlgstrangerrequest.cpp  dlgstrangerrequest.h  dlgstrangerrequest.ui  groupdialog.cpp  groupdialog.h  groupdialog.ui  (+64 more)
qt/audiorecorder/: audiorecorder.cpp  audiorecorder.h  audiorecorder.pro  main.cpp
qt/camera/: camera.cpp  camera.h  camera.ui  main.cpp  videosettings.h
qt/ext/audiorecorder/: audiorecorder.cpp  audiorecorder.h  audiorecorder.pro  audiorecorder.ui  main.cpp  qaudiolevel.cpp
qt/ext/camera/: camera.cpp  camera.h  camera.pro  camera.ui  imagesettings.cpp  imagesettings.h  main.cpp  videosettings.cpp  videosettings.ui
qt/ext/screenshot/: main.cpp  screenshot.cpp  screenshot.h  screenshot.pro
qt/ext/textedit/: example.html  textedit.pro
qt/installer/macosx64/: .gitignore  package.sh
qt/installer/ubuntu64/: package.sh
qt/installer/win32/: .gitignore  package.sh
qt/locale/: .gitignore  bitmail_de.ts  bitmail_en.ts  bitmail_fr.ts  bitmail_ja.ts  bitmail_ru.ts  bitmail_zh_CN.ts  bitmail_zh_TW.ts
qt/screenshot/: screenshot.pro
qt/textedit/: textedit.cpp  textedit.h  textedit.pro
qt/win32-installer/: .gitignore  autogen.sh  package.sh  setup.nsi
server/: README.md  tx.php
share/: setup.nsi
tb/: README.md  thunderbird-52.0.patch
utility/: ca.sh  gen.sh  hex2bin.sh  user.sh
web/asn1js/: sha256sums.asc
(+73 files in other folders)
